Fix incorrect hexdoc values

--- a/doc/hexdoc.toml
+++ b/doc/hexdoc.toml
@@ -1,12 +1,11 @@
 modid = "hexbound"
-book = "hexcasting:thehexbook"
+book = "hexbound:hexboundbook"
 default_lang = "en_us"
 default_branch = "1.19"
 
 resource_dirs = [  # top takes priority
     "resources",
-    "{_common.src}/main/resources",
-    { path="{^_common.src}/generated/resources", required=false },
+    "{$_paths.resources}",
     { modid="hexcasting" },
     { modid="minecraft" },
     { modid="hexdoc" },
@@ -14,7 +13,7 @@ resource_dirs = [  # top takes priority
 export_dir = "src/hexdoc_hexbound/_export/generated"
 
 [template]
-icon = "icon.png"
+icon = "{$_paths.resources}/assets/hexbound/icon.png"
 include = [
     "hexbound",
     "hexcasting",
@@ -23,22 +22,20 @@ include = [
 
 [template.args]
 mod_name = "Hexbound"
-author = "object-Object"
+author = "Cypher121"
 show_landing_text = false
 
 [extra.hexcasting]
-# regexes for parsing pattern registry files - try running copier update and picking a different regex if your patterns aren't loading
 # NOTE: "!Raw" means "don't apply variable interpolation to this value"
-_pattern_regex = { "!Raw"='HexPattern\.fromAngles\("(?P<signature>[qweasd]+)", HexDir\.(?P<startdir>\w+)\),\s*modLoc\("(?P<name>[^"]+)"\)[^;]+?(?:makeConstantOp|Op\w+|Widget\.\w+)(?:[^;]*(?P<is_per_world>true)\);)?' }
+_pattern_regex."!Raw" = 'HexPattern\.fromAngles\("(?P<signature>[qweasd]+)",\s*HexDir\.(?P<startdir>\w+)\),\s*"(?P<name>[^"]+)"(?:.|\n)+?(?:makeConstantOp|Op\w+|Widget\.\w+)(?:(?:(?!registerPattern)(?:.|\n))*?\n\s*(?P<is_per_world>true),?\n\s*\))?'
 _per_world_value = "true"
 
 [[extra.hexcasting.pattern_stubs]]
-path = "{^^^_common.package}/init/HexboundPatterns.kt"
+path = "{$_paths.kotlin_package}/init/HexboundPatterns.kt"
 regex = "{^_pattern_regex}"
 per_world_value = "{^_per_world_value}"
 
-# platforms
-
-[_common]
+[_paths]
 src = "../src"
-package = "{src}/main/kotlin/coffee/cypher/hexbound"
+resources = "{src}/main/resources"
+kotlin_package = "{src}/main/kotlin/coffee/cypher/hexbound"
