--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,9 +1,9 @@
 name: Build the web book
 
+# TODO: move publishing into release.yml
 on:
   push:
     branches: "1.19"
-    tags: "v*"
   workflow_dispatch:
     inputs:
       release:
@@ -16,7 +16,6 @@ on:
         options:
           - none
           - PyPI
-          # - TestPyPI
 
 env:
   PYPI_PACKAGE: hexdoc-hexbound
@@ -34,19 +33,12 @@ jobs:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
       python-version: '3.11'
-      release: |-
-        ${{
-          github.event_name != 'push' && inputs.release
-          || github.event_name == 'push' && startsWith(github.event.head_commit.message, '[Release]')
-          || github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        }}
+      release: ${{ github.event_name == 'workflow_dispatch' && inputs.release }}
 
   publish-pypi:
     runs-on: ubuntu-latest
     needs: hexdoc
-    if: |-
-      needs.hexdoc.outputs.release == 'true' &&
-      (github.event_name == 'push' || inputs.publish == 'PyPI')
+    if: needs.hexdoc.outputs.release == 'true' && inputs.publish == 'PyPI'
     environment:
       name: pypi
       url: https://pypi.org/p/${{ env.PYPI_PACKAGE }}
@@ -61,26 +53,3 @@ jobs:
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-
-  # Uncomment if you want to try publishing to TestPyPI before using the real index.
-
-  # publish-testpypi:
-  #   runs-on: ubuntu-latest
-  #   needs: hexdoc
-  #   if: github.event_name != 'push' && inputs.publish == 'TestPyPI'
-  #   environment:
-  #     name: testpypi
-  #     url: https://test.pypi.org/p/${{ env.PYPI_PACKAGE }}
-  #   permissions:
-  #     id-token: write
-  #   steps:
-  #     - name: Download package artifact
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: hexdoc-build
-  #         path: dist
-
-  #     - name: Publish to TestPyPI
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         repository-url: https://test.pypi.org/legacy/
