--- a/src/main/resources/assets/hexbound/lang/zh_cn.flatten.json5
+++ b/src/main/resources/assets/hexbound/lang/zh_cn.flatten.json5
@@ -184,7 +184,7 @@
                 title: "虚意识",
                 "1": "我之前对相关学说的所有研究都表明，$(hex)咒术$()的施放必须要有一个存在于$(o)世界$()上的、实在的施法者。\
 |                     显然，之前所有的$(hex)咒术$()都是由我施放的，满足上述要求。但就算\
-|                     最终找到了$(l:hexcasting:greatwork/spellcircle)某些独立于施法者的施法方式$()（或者改装一下发射器让它能甩动缀品说不定也行），\
+|                     最终找到了$(l:hexcasting:greatwork/spellcircles)某些独立于施法者的施法方式$()（或者改装一下发射器让它能甩动缀品说不定也行），\
 |                     它们也会在我跨过前往其他维度的传送门时断开连接并停止工作。",
                 "2": "然而，我一直坚信存在一种设计精妙的$(media)媒质$()网络，它能“骗过”$(hex)咒术$()，并使其锁存在网络中直至施放完毕。\
 |                     我叫这些网络“虚意识”。它们要么在功能上有很多限制（如组构体），要么需要\
@@ -234,7 +234,7 @@
         },
         "greatwork.impetus_figment": {
             title: "促动石用虚意识",
-            "1": "如今我已有控制意识的能力，我又读了一遍有关$(l:hexbound:patterns/great_spells/impetus_fake_player)绑定虚意识$()的笔记，并确认了$(l:hexcasting:greatwork/impetuses)牧师促动石$()是虚意识的极佳容器。\
+            "1": "如今我已有控制意识的能力，我又读了一遍有关$(l:hexbound:patterns/great_spells/impetus_fake_player)绑定虚意识$()的笔记，并确认了$(l:hexcasting:greatwork/impetus)牧师促动石$()是虚意识的极佳容器。\
 |                 该促动石需绑定至一个和我一样已受$(o)启迪$()的$(hex)咒术师$()。也没有其他意识能将自身的一部分抽离到这种程度了。$(br2)目前还没有。但他们会的。迟早会的。",
             "2": "此外，如果该促动石能连接到其绑定对象，那种联系便会覆盖虚意识的影响。$(br2)\
 |                 没有意识的思维被绑在晶格上每段思维折叠覆盖尖啸着它不是它这很有道理这没有道理$(k)hello penguin$()$(br2)\
