--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ mixin-extras = "0.2.0-beta.6"
 geckolib = "3.1.37"
 kettle = "2.2.1+1.19.2"
 
+pkpcpbp = "0.1.0-pre-87"
+
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 quilt_mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt_mappings" }
@@ -46,6 +48,8 @@ fake-player = { module = "dev.cafeteria:fake-player-api", version.ref = "fake-pl
 mixin-extras = { module = "com.github.llamalad7.mixinextras:mixinextras-fabric", version.ref = "mixin-extras" }
 geckolib = { module = "software.bernie.geckolib:geckolib-quilt-1.19", version.ref = "geckolib" }
 kettle = { module = "coffee.cypher.kettle:kettle", version.ref = "kettle" }
+
+pkpcpbp = { module="at.petra-k.pkpcpbp:PKPCPBP", version.ref="pkpcpbp" }
 
 [bundles]
 kotlin = ["qkl"]
