--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,24 +1,10 @@
 name: Build the web book
 
-# TODO: move publishing into release.yml
 on:
   push:
-    branches: "1.19"
+    branches: "*"
+  pull_request:
   workflow_dispatch:
-    inputs:
-      release:
-        description: Release this version
-        type: boolean
-        default: false
-      publish:
-        description: Package index to publish to
-        type: choice
-        options:
-          - none
-          - PyPI
-
-env:
-  PYPI_PACKAGE: hexdoc-hexbound
 
 permissions:
   contents: read
@@ -32,24 +18,13 @@ jobs:
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
-      python-version: '3.11'
-      release: ${{ github.event_name == 'workflow_dispatch' && inputs.release }}
-
-  publish-pypi:
-    runs-on: ubuntu-latest
-    needs: hexdoc
-    if: needs.hexdoc.outputs.release == 'true' && inputs.publish == 'PyPI'
-    environment:
-      name: pypi
-      url: https://pypi.org/p/${{ env.PYPI_PACKAGE }}
-    permissions:
-      id-token: write
-    steps:
-      - name: Download package artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: hexdoc-build
-          path: dist
-
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      python-version: 3.11
+      release: false
+      deploy-pages: |-
+        ${{
+          github.event_name != 'pull_request'
+          && contains(
+            fromJson('["main", "1.19"]'),
+            (github.head_ref || github.ref_name)
+          )
+        }}
