--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ requires-python = ">=3.11"
 dynamic = ["version", "dependencies", "optional-dependencies"]
 
 [project.urls]
-Homepage = "https://hexbound.hexxy.media/"
+Homepage = "https://hexbound.hexxy.media"
 Source = "https://github.com/object-Object/hexbound"
 
 # Gradle version/deps
