--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,7 @@ jobs:
 
   build-docs:
     name: Build Docs
+    needs: build-artifacts  # this workflow deploys the release to Pages, so wait until we know the mod built properly
     uses: hexdoc-dev/hexdoc/.github/workflows/hexdoc.yml@v1!0.1.dev
     permissions:
       contents: write
