--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,12 +45,14 @@ allow-direct-references = true
 dependencies = [
     "hexdoc>=1!0.1.0a18",
     { package="hexdoc-hexcasting", op="~=", py-version="1.0", key="hexcasting" },
-    # { package="hexdoc-hexal", op="~=", py-version="1.0.dev", key="hexal-hexdoc" },
-    # FIXME: remove when Hexal is published to PyPI
-    "hexdoc-hexal @ {root:uri}/doc/libs/hexdoc_hexal-0.2.19.1.0.dev0-py3-none-any.whl",
+    { package="hexdoc-hexal", op="~=", py-version="1.0.dev", key="hexal-hexdoc" },
 ]
 
 [tool.hatch.metadata.hooks.version-catalog.optional-dependencies]
+libs = [
+    # FIXME: remove when Hexal is published to PyPI
+    "hexdoc-hexal @ {root:uri}/doc/libs/hexdoc_hexal-0.2.19.1.0.dev0-py3-none-any.whl",
+]
 dev = [
     "ruff~=0.1.4",
 ]
